--- a/css.css
+++ b/css.css
@@ -28,8 +28,8 @@ a:hover {
 
 .grid {
 	display: grid;
-	grid-auto-columns:300px;
-	grid-auto-rows:100px;
+	grid-auto-columns:1fr;
+	grid-auto-rows:1fr;
 	grid-gap:5px;
 }
 
