--- a/css.css
+++ b/css.css
@@ -13,6 +13,10 @@ h3 {
 	text-align: center;
 }
 
+a {
+	text-align: center;
+}
+
 a:link {
 	color: rgb(51, 51, 255);
 	text-decoration: none;
@@ -29,8 +33,8 @@ a:hover {
 .grid {
 	display: grid;
 	grid-auto-columns:1fr;
-	grid-auto-rows:1fr;
-	grid-gap:5px;
+	grid-auto-rows:100px;
+	grid-gap:20px;
 }
 
 .info {
