--- a/css.css
+++ b/css.css
@@ -3,6 +3,7 @@ body {
 	font-family: Arial;
 	font-size: 22.5px;
 	color: rgb(255, 255, 0);
+	margin: 10px;
 }
 
 h1 {
@@ -11,6 +12,9 @@ h1 {
 
 h3 {
 	text-align: center;
+	margin: 1;
+	padding: 0;
+	line-height: 0.6;
 }
 
 a {
@@ -33,7 +37,7 @@ a:hover {
 .grid {
 	display: grid;
 	grid-auto-columns:1fr;
-	grid-auto-rows:100px;
+	grid-auto-rows:80px;
 	grid-gap:20px;
 }
 
@@ -60,6 +64,10 @@ a:hover {
 .work {
 	grid-column:5;
 	grid-row:5;
+}
+.games_and_anime {
+	grid-column:6;
+	grid-row:6;
 }
 
 button {
